<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.fruzelee.eventcalendar.views.MyEditText
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:maxLength="180"
            android:maxLines="1"
            android:minEms="20"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/day_text_size" />

        <com.github.fruzelee.eventcalendar.views.MyEditText
            android:id="@+id/event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_title"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_toStartOf="@+id/event_show_on_map"
            android:hint="@string/location"
            android:inputType="textCapWords"
            android:maxLength="180"
            android:maxLines="1"
            android:minEms="20"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/day_text_size" />

        <ImageView
            android:id="@+id/event_show_on_map"
            android:layout_width="@dimen/normal_icon_size"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/event_location"
            android:layout_alignBottom="@+id/event_location"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/activity_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/contentDescription"
            android:padding="@dimen/small_margin"
            android:src="@drawable/ic_place_vector" />

        <com.github.fruzelee.eventcalendar.views.MyEditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_location"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:autoLink="all"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textCapSentences|textMultiLine"
            android:linksClickable="true"
            android:minEms="20"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/day_text_size" />

        <ImageView
            android:id="@+id/event_description_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/event_description"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="@color/divider_grey"
            android:importantForAccessibility="no" />

        <ImageView
            android:id="@+id/event_time_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/event_description_divider"
            android:layout_alignTop="@+id/event_all_day"
            android:layout_alignBottom="@+id/event_all_day"
            android:layout_marginStart="@dimen/normal_margin"
            android:contentDescription="@string/contentDescription"
            android:padding="@dimen/medium_margin"
            android:src="@drawable/ic_clock_vector" />

        <com.github.fruzelee.eventcalendar.views.MySwitchCompat
            android:id="@+id/event_all_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_description_divider"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_toEndOf="@+id/event_time_image"
            android:paddingTop="@dimen/normal_margin"
            android:paddingBottom="@dimen/normal_margin"
            android:text="@string/all_day"
            android:textSize="@dimen/day_text_size"
            app:switchPadding="@dimen/small_margin" />

        <com.github.fruzelee.eventcalendar.views.MyTextView
            android:id="@+id/event_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_time_image"
            android:layout_alignStart="@+id/event_all_day"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="0dp"
            android:paddingTop="@dimen/activity_margin"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:textSize="@dimen/day_text_size"
            tools:text="January 1 1970" />

        <com.github.fruzelee.eventcalendar.views.MyTextView
            android:id="@+id/event_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_time_image"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin"
            android:textSize="@dimen/day_text_size"
            tools:text="00:00" />

        <com.github.fruzelee.eventcalendar.views.MyTextView
            android:id="@+id/event_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_start_date"
            android:layout_alignStart="@+id/event_all_day"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="0dp"
            android:paddingTop="@dimen/activity_margin"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:textSize="@dimen/day_text_size"
            tools:text="January 1 1970" />

        <com.github.fruzelee.eventcalendar.views.MyTextView
            android:id="@+id/event_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_start_time"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_margin"
            android:textSize="@dimen/day_text_size"
            tools:text="00:00" />

        <ImageView
            android:id="@+id/event_time_zone_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/event_end_date"
            android:layout_alignTop="@+id/event_time_zone"
            android:layout_alignBottom="@+id/event_time_zone"
            android:layout_marginStart="@dimen/normal_margin"
            android:contentDescription="@string/contentDescription"
            android:padding="@dimen/medium_margin"
            android:src="@drawable/ic_globe_vector" />

        <com.github.fruzelee.eventcalendar.views.MyTextView
            android:id="@+id/event_time_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_end_date"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_toEndOf="@+id/event_time_zone_image"
            android:background="?attr/selectableItemBackground"
            android:ellipsize="end"
            android:lines="1"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:textSize="@dimen/day_text_size"
            tools:text="Europe/Bratislava" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/event_time_zone"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:background="@color/divider_grey"
            android:importantForAccessibility="no" />

    </RelativeLayout>

</ScrollView>
